nginx reload cron

--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,1 +1,6 @@
 FROM nginx:alpine
+
+# Setup reload cron
+RUN echo "0       19      *       *       *       nginx -s reload" >> /etc/crontabs/root
+
+CMD crond && nginx -g "daemon off;"
