--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
      - "80:80"
      - "443:443"
     volumes:
+     - ./nginx/static:/var/www/
      - ./nginx/templates:/etc/nginx/templates
      - letsencrypt:/etc/letsencrypt
     environment:
